--- a/components.281260.json
+++ b/components.281260.json
@@ -4,12 +4,51 @@
       "name": "button",
       "display_name": null,
       "created_at": "2024-03-20T09:27:18.368Z",
-      "updated_at": "2024-03-20T09:27:49.362Z",
+      "updated_at": "2024-03-20T19:00:56.950Z",
       "id": 5527928,
       "schema": {
-        "button": {
+        "text": {
+          "type": "text"
+        },
+        "variant": {
           "type": "option",
-          "use_uuid": true
+          "use_uuid": true,
+          "options": [
+            {
+              "_uid": "e19cd5ca-4441-4f00-af27-780708b302ec",
+              "name": "Primary",
+              "value": "default"
+            },
+            {
+              "_uid": "32f1a8d7-6a00-4b95-a248-712149cfb0ba",
+              "value": "outline",
+              "name": "Outline"
+            }
+          ],
+          "default_value": "default",
+          "required": true,
+          "exclude_empty_option": false
+        },
+        "before": {
+          "type": "option",
+          "use_uuid": true,
+          "options": [
+            {
+              "_uid": "824214df-ab15-45e4-9db2-82f24d77049a",
+              "name": "Black",
+              "value": "black"
+            },
+            {
+              "_uid": "b9b86b21-5a3f-4b32-a313-7765a802308d",
+              "value": "white",
+              "name": "White"
+            }
+          ],
+          "default_value": "black",
+          "required": true
+        },
+        "link": {
+          "type": "multilink"
         }
       },
       "image": null,
@@ -22,7 +61,7 @@
       "real_name": "button",
       "component_group_uuid": null,
       "color": null,
-      "icon": null,
+      "icon": "block-1-2block",
       "content_type_asset_preview": null
     },
     {
@@ -80,6 +119,39 @@
       "content_type_asset_preview": null
     },
     {
+      "name": "hero",
+      "display_name": null,
+      "created_at": "2024-03-20T12:06:09.105Z",
+      "updated_at": "2024-03-20T18:40:01.665Z",
+      "id": 5529003,
+      "schema": {
+        "markdown": {
+          "type": "markdown",
+          "pos": 0
+        },
+        "button": {
+          "type": "bloks",
+          "pos": 1
+        },
+        "button_2": {
+          "type": "bloks",
+          "pos": 2
+        }
+      },
+      "image": null,
+      "preview_field": null,
+      "is_root": false,
+      "preview_tmpl": null,
+      "is_nestable": true,
+      "all_presets": [],
+      "preset_id": null,
+      "real_name": "hero",
+      "component_group_uuid": null,
+      "color": null,
+      "icon": null,
+      "content_type_asset_preview": null
+    },
+    {
       "name": "page",
       "display_name": null,
       "created_at": "2024-03-20T08:40:55.121Z",
@@ -122,6 +194,40 @@
       "all_presets": [],
       "preset_id": null,
       "real_name": "teaser",
+      "component_group_uuid": null,
+      "color": null,
+      "icon": null,
+      "content_type_asset_preview": null
+    },
+    {
+      "name": "text_with_icon",
+      "display_name": null,
+      "created_at": "2024-03-20T13:03:03.674Z",
+      "updated_at": "2024-03-20T13:14:24.066Z",
+      "id": 5530118,
+      "schema": {
+        "text": {
+          "type": "text"
+        },
+        "image": {
+          "type": "asset",
+          "filetypes": [
+            "images"
+          ],
+          "required": true
+        },
+        "link": {
+          "type": "multilink"
+        }
+      },
+      "image": null,
+      "preview_field": null,
+      "is_root": false,
+      "preview_tmpl": null,
+      "is_nestable": true,
+      "all_presets": [],
+      "preset_id": null,
+      "real_name": "text_with_icon",
       "component_group_uuid": null,
       "color": null,
       "icon": null,
