--- a/components.281260.json
+++ b/components.281260.json
@@ -4,11 +4,13 @@
       "name": "button",
       "display_name": null,
       "created_at": "2024-03-20T09:27:18.368Z",
-      "updated_at": "2024-03-20T19:00:56.950Z",
+      "updated_at": "2024-03-21T14:45:18.267Z",
       "id": 5527928,
       "schema": {
         "text": {
-          "type": "text"
+          "type": "text",
+          "key": "text",
+          "pos": 0
         },
         "variant": {
           "type": "option",
@@ -27,28 +29,40 @@
           ],
           "default_value": "default",
           "required": true,
-          "exclude_empty_option": false
+          "exclude_empty_option": false,
+          "key": "variant",
+          "pos": 1
         },
-        "before": {
+        "background": {
           "type": "option",
           "use_uuid": true,
           "options": [
             {
               "_uid": "824214df-ab15-45e4-9db2-82f24d77049a",
-              "name": "Black",
-              "value": "black"
+              "name": "White",
+              "value": "white"
             },
             {
               "_uid": "b9b86b21-5a3f-4b32-a313-7765a802308d",
-              "value": "white",
-              "name": "White"
+              "value": "black",
+              "name": "Black"
+            },
+            {
+              "_uid": "b9344026-b623-44f7-9409-561e5b9af734",
+              "value": "none",
+              "name": "None"
             }
           ],
           "default_value": "black",
-          "required": true
+          "required": true,
+          "display_name": "Background",
+          "key": "before",
+          "pos": 2
         },
         "link": {
-          "type": "multilink"
+          "type": "multilink",
+          "key": "link",
+          "pos": 3
         }
       },
       "image": null,
@@ -122,7 +136,7 @@
       "name": "hero",
       "display_name": null,
       "created_at": "2024-03-20T12:06:09.105Z",
-      "updated_at": "2024-03-20T18:40:01.665Z",
+      "updated_at": "2024-03-21T13:54:20.440Z",
       "id": 5529003,
       "schema": {
         "markdown": {
@@ -131,11 +145,8 @@
         },
         "button": {
           "type": "bloks",
-          "pos": 1
-        },
-        "button_2": {
-          "type": "bloks",
-          "pos": 2
+          "pos": 1,
+          "display_name": "buttons"
         }
       },
       "image": null,
